crates/aranya-policy-lang/tests/data/ffi_use/expr.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
Syntax error: line 1 column 8:  --> 1:8
  |
1 | use one, two
  |        ^---
  |
  = expected EOI, ephemeral_modifier, immutable_modifier, use_definition, effect_definition, struct_definition, enum_definition, function_decl, finish_function_decl, or global_let_statement
